# razel

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  rust-toolchain.toml
.github/: .kodiak.toml  CODEOWNERS
.github/workflows/: gemini.yml  rust.yml
.idx/: airules.md  dev.nix
examples/basic/: BUILD.bazel  MODULE.bazel
examples/basic/nested/: BUILD.bazel
proptest-regressions/bazel/: label.txt
src/: main.rs  query.rs  shared_error.rs  stream_tee.rs  workspace.rs
src/bazel/: bzlmod.rs  label.rs  mod.rs  package.rs  repo.rs  rule.rs
src/starlark/: eval.rs  mod.rs
src/starlark/builtins/: mod.rs
src/starlark/globals/: build.rs  bzl.rs  mod.rs  module.rs
tests/: cli.rs  query.rs
