[package]
name = "razel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
fastrace = { version = "0.7", features = ["enable"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
