[package]
name = "razel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
tonic = { version = "0.14", features = ["zstd", "tls-native-roots"] }
fastrace = { version = "0.7", features = ["enable"] }
starlark = "0.13"
allocative = "0.3"
derive_more = "0.99.17"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
erased-serde = "0.3"
bazel-remote-apis = "0.18.0"
async-recursion = "1.1.1"
futures = "0.3.31"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
