[package]
name = "razel"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
    "tracing",
] }
tonic = { version = "0.14", features = ["zstd", "tls-native-roots"] }
fastrace = { version = "0.7", features = ["enable"] }
starlark = "0.13"
allocative = "0.3"
derive_more = { version = "2.0.0", features = ["display"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
erased-serde = "0.4"
bazel-remote-apis = "0.26.0"
async-recursion = "1.1.1"
futures = "0.3.31"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3.19"
console-subscriber = "0.5.0"
chumsky = { version = "0.12.0" }
dynosaur = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
proptest = "1.0"
